// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Styles/MinWidth > handles % value 1`] = `
{
  "classNames": [
    "_root_617b2b",
    [
      "_--type-literal_617b2b",
    ],
  ],
  "variables": {
    "--rs-min-w-s": "50%",
  },
}
`;

exports[`Styles/MinWidth > handles px value 1`] = `
{
  "classNames": [
    "_root_617b2b",
    [
      "_--type-literal_617b2b",
    ],
  ],
  "variables": {
    "--rs-min-w-s": "50px",
  },
}
`;

exports[`Styles/MinWidth > handles responsive value 1`] = `
{
  "classNames": [
    "_root_617b2b",
    [
      "_--type-literal_617b2b",
      "_--type-literal--l_617b2b",
    ],
  ],
  "variables": {
    "--rs-min-w-l": "50%",
    "--rs-min-w-s": "50px",
  },
}
`;

exports[`Styles/MinWidth > handles undefined value 1`] = `null`;

exports[`Styles/MinWidth > handles unit value 1`] = `
{
  "classNames": [
    "_root_617b2b",
    [
      "_--type-unit_617b2b",
    ],
  ],
  "variables": {
    "--rs-min-w-s": 5,
  },
}
`;
